--- a/themes/anubis/layouts/partials/footer.html
+++ b/themes/anubis/layouts/partials/footer.html
@@ -14,7 +14,7 @@
             </ul>
         {{ end }}
         <div class="copyright">
-            <p>© {{ if isset .Site.Params "author"}}{{ .Site.Params.author }}, {{end}}{{ now.Year }}</p>
+            <p>© {{ if isset .Site.Params "author"}}{{ .Site.Params.author }}, {{end}}{{ now.Year }}  <img src="/octcat.gif" width="25"></p>
         </div>
 
         {{ partial "themeSwitcher.html" . }}
