--- a/themes/anubis/layouts/partials/header.html
+++ b/themes/anubis/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <h1 class="site-title">
-    <a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a>
+    📍 <a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a>
 </h1>
 {{ if .Site.Menus.main }}
     <nav>
