--- a/themes/anubis/layouts/_default/list.html
+++ b/themes/anubis/layouts/_default/list.html
@@ -3,7 +3,7 @@
         {{ .Content }}
     </div>
 
-    <h1 class="post-title">{{ i18n .Title }}</h1>
+    <h1 class="post-title">{{ .Title }}</h1>
     {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
     {{ range $pages }}
         <div class="post-short-list">
