--- a/themes/anubis/layouts/_default/terms.html
+++ b/themes/anubis/layouts/_default/terms.html
@@ -3,7 +3,7 @@
         {{ .Content }}
     </div>
 
-    <h1>{{ i18n .Title }}</h1>
+    <h1>{{ .Title }}</h1>
 
     <ul class="terms">
         {{ range $key, $value := .Data.Terms }}
