--- a/themes/anubis/layouts/partials/footer.html
+++ b/themes/anubis/layouts/partials/footer.html
@@ -1,9 +1,4 @@
 <footer class="common-footer">
-    {{ $languagesCount := $.Site.Home.AllTranslations }}
-    {{ if gt $languagesCount 1 }}
-        {{ partial "languageSelect.html" . }}
-    {{ end }}
-
     <div class="common-footer-bottom">
         {{ if .Site.Menus.footer }}
             {{ $currentPage := . }}
@@ -14,7 +9,7 @@
             </ul>
         {{ end }}
         <div class="copyright">
-            <p>© {{ if isset .Site.Params "author"}}{{ .Site.Params.author }}, {{end}}{{ now.Year }}  <img src="/octcat.gif" width="25"></p>
+            <p>© {{ .Site.Title }}, {{ now.Year }} <img src="/octcat.gif" width="25"></p>
         </div>
 
         {{ partial "themeSwitcher.html" . }}
