--- a/themes/anubis/layouts/partials/themeSwitcher.html
+++ b/themes/anubis/layouts/partials/themeSwitcher.html
@@ -5,7 +5,7 @@
 
 {{ if not (in (slice "light-without-switcher" "dark-without-switcher" "auto-without-switcher") $style) }}
     <button class="theme-switcher">
-        {{ i18n "darkTheme" | humanize }}
+        {{ "darkTheme" | humanize }}
     </button>
 
     <script>
@@ -54,7 +54,7 @@
 
     function changeButtonText()
     {
-        switchButton.textContent = currentTheme == 'dark' ?  {{ i18n "lightTheme" | humanize }} : {{ i18n "darkTheme" | humanize }}
+        switchButton.textContent = currentTheme == 'dark' ?  {{ "lightTheme" | humanize }} : {{ "darkTheme" | humanize }}
     }
 
     function switchTheme(e) {
