--- a/themes/anubis/layouts/partials/footer.html
+++ b/themes/anubis/layouts/partials/footer.html
@@ -1,4 +1,5 @@
-<footer class="common-footer">
+<!-- <footer class="common-footer">
+    <hr>
     <div class="common-footer-bottom">
         {{ if .Site.Menus.footer }}
             {{ $currentPage := . }}
@@ -14,4 +15,4 @@
 
         {{ partial "themeSwitcher.html" . }}
     </div>
-</footer>
+</footer> -->
