--- a/themes/default/assets/css/main.css
+++ b/themes/default/assets/css/main.css
@@ -1,23 +1,27 @@
-{{ $light := resources.Get "css/light.css" }}
-{{ $dark := resources.Get "css/dark.css" }}
-
-{{ $light.Content }}
-
-{{ if eq site.Params.style "dark-without-switcher" }}
 :root {
-    {{ $dark.Content }}
+   /* light.css */ 
+    --font-color: #333;
+    --bg-color: #fff;
+
+    --link-color:#1d60a3;
+    --link-state-color:#a31d1d;
+    --link-state-border-color: rgba(163, 29, 29, .5);
+
+    --thead-bg-color: lightgrey;
+    --table-border-color: lightgrey;
+
+    --pre-color: #333;
+    --pre-bg-color: #f1f1f1;
+
+    --bq-color: #ccc;
+    --hr-color: #ccc;
+
+    --pagination-bg-color: #fafafa;
+    --pagination-link-color: #696969;
+
+    --post-info-color: grey;
 }
-{{ else if eq site.Params.style "auto-without-switcher" }}
-@media (prefers-color-scheme: dark) {
-    :root {
-        {{ $dark.Content }}
-    }
-}
-{{else }}
-[data-theme="dark"] {
-    {{ $dark.Content }}
-}
-{{ end }}
+
 
 /* Basic */
 html {
@@ -417,7 +421,7 @@ article figcaption {
     color: var(--pagination-link-color);
 }
 
-.pagination-item a:hover, 
+.pagination-item a:hover,
 .pagination-item a:focus {
     color: var(--link-state-color);
 }
@@ -467,15 +471,6 @@ ul.language-select, ul.footer-menu {
 
 ul.language-select > li, ul.footer-menu > li {
     margin-right: 1em;
-}
-
-.theme-switcher {
-    color: var(--switcher-color);
-    background: var(--switcher-bg-color);
-    padding: 0.5em 1em;
-    font-size: 16px;
-    border: none;
-    margin-bottom: 1em;
 }
 
 /* Media Queries */
