--- a/themes/default/layouts/partials/header.html
+++ b/themes/default/layouts/partials/header.html
@@ -1,6 +1,6 @@
-<h1 class="site-title">
+<p class="site-title">
     📍 <a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a>
-</h1>
+</p>
 {{ if .Site.Menus.main }}
     <nav>
         {{ $currentPage := . }}
