--- a/themes/default/layouts/_default/list.html
+++ b/themes/default/layouts/_default/list.html
@@ -6,10 +6,10 @@
     {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
     {{ range $pages }}
         <div class="post-short-list">
-            <header class="post-header">
-                <h2 class="post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}"><a href="{{ .RelPermalink }}">{{ trim .Title " " }}</a></h2>
-            </header>
             {{ partial "postInfo.html" . }}
+            <header class="post-header">
+                <p class="post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}"><a href="{{ .RelPermalink }}">{{ trim .Title " " }}</a></p>
+            </header>
         </div>
     {{ end }}
 
