--- a/themes/default/assets/css/main.css
+++ b/themes/default/assets/css/main.css
@@ -279,9 +279,9 @@ article:not(:last-of-type) {
 
 article header h1 {
     line-height: 1.2;
-    margin-top: 0.5rem;
+    margin-top: 0;
     margin-bottom: 5rem;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 article header h1 a {
@@ -304,8 +304,6 @@ article header h1 a {
 }
 
 .post-short-list .post-info {
-    margin-top: 0;
-    margin-top: 1.5em;
 }
 
 .post-taxonomies {
