--- a/themes/default/layouts/_default/list.html
+++ b/themes/default/layouts/_default/list.html
@@ -5,12 +5,15 @@
 
     {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
     {{ range $pages }}
-        <div class="post-short-list">
+        <ul class="post-short-list">
             {{ partial "postInfo.html" . }}
-            <header class="post-header">
-                <p class="post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}"><a href="{{ .RelPermalink }}">{{ trim .Title " " }}</a></p>
-            </header>
-        </div>
+            <li class="post-header">
+                <p class="post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}">
+                    {{if .Params.emoji }}<span class="post-title-emoji">{{emojify .Params.emoji}}</span>{{end}}
+                    <a href="{{ .RelPermalink }}">{{ trim .Title " " }}</a>
+                </p>
+            </li>
+        </ul>
     {{ end }}
 
 {{ end }}
