--- a/themes/default/layouts/_default/single.html
+++ b/themes/default/layouts/_default/single.html
@@ -10,7 +10,10 @@
     <article class="post">
         {{ partial "postInfo.html" . }}
         <header class="post-header">
-            <h1 class="post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}">{{ trim .Title  " " }}</h1>
+            <h1 class="post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}">
+                {{if .Params.emoji }}<span class="post-title-emoji">{{emojify .Params.emoji}}</span>{{end}}
+                {{ trim .Title  " " }}
+            </h1>
         </header>
         <div class="content">
             {{ .Content }}
