--- a/themes/default/layouts/partials/header.html
+++ b/themes/default/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <p class="site-title">
-    {{emojify .Site.Params.faviconChar }} <a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a>
+    {{emojify ":space_invader:" }} <a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a>
 </p>
 {{ if .Site.Menus.main }}
     <nav>
